# multi-tasker

./: 2  :w  Cargo.toml  README.md  install.ps1  install.sh
mult_lib/: Cargo.toml
mult_lib/src/: args.rs  command.rs  error.rs  lib.rs  table.rs  task.rs
mult_spawn/: Cargo.toml
mult_spawn/src/: main.rs
src/: client.rs  command.rs  commands.rs  constants.rs  daemon.rs  linux.rs  ls.rs  main.rs  process.rs  server.rs  start.rs  stop.rs  table.rs  task.rs  windows.rs
src/commands/: create.rs  delete.rs  health.rs  help.rs  logs.rs  ls.rs  mod.rs  restart.rs  start.rs  stop.rs
src/manager/: command.rs  table.rs  task.rs
src/managers/: command.rs  mod.rs  table.rs  task.rs
src/platform_lib/linux/: fork.rs
src/platform_lib/windows/: fork.rs
