[package]
name = "mult"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
home = "0.5.9"
bincode = "1.3.3"
sysinfo = "0.30.5"
colored = "2.1.0"
prettytable = "0.10.0"
notify = "6.1.1"
