[package]
name = "mult"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
home = "0.5.9"
bincode = "1.3.3"
sysinfo = "0.30.5"
colored = "2.1.0"
prettytable = "0.10.0"
notify = "6.1.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.53.0", features = [
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Services"
] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
libc = "0.2.153"
