workspace = { members = [ "mult_lib", "mult_spawn"] }
[package]
name = "mult"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mlt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.9"
bincode = "1.3.3"
sysinfo = "0.30.5"
colored = "2.1.0"
prettytable = "0.10.0"
notify = "6.1.1"
term = "0.7"
mult_lib = { path = "./mult_lib" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.153"
